[macOS] Toggling dark mode does not update the scrollbar appearance in overflow: scroll elements https://bugs.webkit.org/show_bug.cgi?id=218538 <rdar://problem/68953006>

Reviewed by Simon Fraser.

Source/WebCore:

This functionality regressed in r260276 with the introduction of async
overflow scrolling on macOS. The appearance of the scrollbar is determined
by [WebScrollerImpDelegate effectiveAppearanceForScrollerImp:]. Prior to
r260276, ScrollbarThemeMac::paint was responsible for painting the scrollbar,
using [NSScrollerImp drawKnob]. Calling this method results in a call to
effectiveAppearanceForScrollerImp:, ensuring the scrollbar has the correct
appearance.

However, async overflow scrolling no longer paints the scrollbar using
drawKnob, and a call to effectiveAppearanceForScrollImp: is no longer made
when switching between light/dark appearances. Since we no longer draw the
knob ourselves, and the NSScrollerImp does not belong to an NSView, the
scrollbar does not automatically get repainted on an appearance change.
To fix, we need to ensure the scrollbar is repainted by making a call to
[NSScrollerImp setNeedsDisplay:] when the page's appearance changes. This
should be done for all scrollbars to ensure their appearance is up to date.

Note that hovering over the scrollbar still results in an update to its
appearance, since AppKit always repaints the scrollbar on hover.

Test: fast/scrolling/mac/overflow-scrollbars-toggle-dark-mode.html

* dom/Document.cpp:
(WebCore::Document::invalidateScrollbars): Tell the FrameView to invalidate scrollbars in all its ScrollableAreas.
* dom/Document.h:
* page/FrameView.cpp:
(WebCore::FrameView::invalidateScrollbarsForAllScrollableAreas):
* page/FrameView.h:
* page/Page.cpp:
(WebCore::Page::appearanceDidChange): Tell each document to invalidate its scrollbars.
* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::setScrollbarOverlayStyle):
(WebCore::ScrollableArea::invalidateScrollbars):

Moved scrollbar invalidation out of setScrollbarOverlayStyle and into
its own method, so that it can be called for all ScrollableAreas in a
FrameView.

* platform/ScrollableArea.h:

LayoutTests:

Added a layout test which draws a scrollbar in the dark appearance,
switches to the light appearance, and draws the scrollbar again. The
final image should have a light appearance scrollbar.

* fast/scrolling/mac/overflow-scrollbars-toggle-dark-mode-expected.html: Added.
* fast/scrolling/mac/overflow-scrollbars-toggle-dark-mode.html: Added.


Canonical link: https://commits.webkit.org/231266@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269437 268f45cc-cd09-0410-ab3c-d52691b4dbfc